[package]
name = "lhc"
version = "1.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memchr = "2.7"
comfy-table = "7.1"
chrono = "0.4"
indicatif = "0.18.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
